<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|center_horizontal|top|center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtMensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtSaludos"
            android:textSize="36sp" />

        <EditText
            android:id="@+id/edtMensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Dime el nombre de la persona a saludar"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btnSaludar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="saludar"
            android:text="@string/btnSaludar" />

        <RadioGroup
            android:id="@+id/rgrGrupo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left">

            <RadioButton
                android:id="@+id/rbtRadio1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="0"
                android:text="@string/rbtBoton1" />

            <RadioButton
                android:id="@+id/rbtRadio2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="1"
                android:text="@string/rbtBoton2" />

            <RadioButton
                android:id="@+id/rbtRadio3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="2"
                android:text="@string/rbtBoton3" />
        </RadioGroup>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>